--- a/UniFind/client/layouts/HomeLayout.html
+++ b/UniFind/client/layouts/HomeLayout.html
@@ -1,14 +1,5 @@
 <template name="HomeLayout">
   {{> Header}}
-  <main>
-    <div class="billboard">
-
-      <a href="/search-found-items"><button class="btn-deny">Lost</button> </a>
-
-      <a href="/search-lost-items"><button class="btn-primary">Found</button> </a>
-
-
-    </div>
-  </main>
+  {{> Body}}
 
 </template>
