--- a/UniFind/client/layouts/MainLayout.html
+++ b/UniFind/client/layouts/MainLayout.html
@@ -1,5 +1,5 @@
 <template name="MainLayout">
-  {{> Header}}
+  {{> HeaderWithNav}}
   <main class="main-layout">
     {{> Template.dynamic template=main}}
   </main>
