added bootstrap navbar and able to view post in main

--- a/UniFind/client/layouts/MainLayout.html
+++ b/UniFind/client/layouts/MainLayout.html
@@ -1,6 +1,7 @@
 <template name="MainLayout">
   {{> HeaderWithNav}}
-  <main class="main-layout">
+  <!--<main class="main-layout">-->
+  <main>
     {{> Template.dynamic template=main}}
   </main>
 </template>
