--- a/UniFind/client/partials/HeaderWithNav.html
+++ b/UniFind/client/partials/HeaderWithNav.html
@@ -1,8 +1,10 @@
 <template name="HeaderWithNav">
-  <header>
+  <!--<header>
     <h1>UniFind</h1>
     {{> loginButtons}}
     <nav class="topnav">
+
+
       <ul>
         <li>
           <a href="/settings"><i class="fa fa-bars"></i></a>
@@ -14,6 +16,33 @@
           <a href="/my-posts"><i class="fa fa-plus-square-o"></i></a>
         </li>
       </ul>
+
     </nav>
-  </header>
+
+  </header> -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
+    <div class="container-fluid">
+      <div class="navbar-header">
+          <a class="navbar-brand" href="/my-account">UniFind</a>
+      </div>
+      <div>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="/settings"><span class="glyphicon glyphicon-cog"></span>Settings</a>
+            </li>
+            <li>
+              <a href="/notifications"><span class="glyphicon glyphicon-bell"></span>Notifications</a>
+            </li>
+            <li>
+              <a href="/my-posts"><span class="glyphicon glyphicon-plus"></span>Add a post</a>
+            </li>
+            <li>
+              {{> loginButtons}}
+            </li>
+          </ul>
+
+      </div>
+    </div>
+
+</nav>
 </template>
