minor fixes and changed layout for posts

--- a/UniFind/client/layouts/HomeLayout.html
+++ b/UniFind/client/layouts/HomeLayout.html
@@ -1,5 +1,6 @@
 <template name="HomeLayout">
   {{> Header}}
-  {{> Body}}
-
+  <main>
+    {{> Template.dynamic template=main}}
+  </main>
 </template>
