--- a/UniFind/client/partials/Header.html
+++ b/UniFind/client/partials/Header.html
@@ -8,10 +8,10 @@
       <div class="navbar-header">
           <a class="navbar-brand" href="/">UniFind</a>
       </div>
-      <div class="nav navbar-nav navbar-right">
-        {{> loginButtons}}
-      </div>
-
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+        <li>{{> loginButtons}}</li>
+      </ul>
     </div>
   </nav>
 </template>
