--- a/UniFind/client/partials/HeaderWithNav.html
+++ b/UniFind/client/partials/HeaderWithNav.html
@@ -23,10 +23,13 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
     <div class="container-fluid">
       <div class="navbar-header">
-          <a class="navbar-brand" href="/my-account">UniFind</a>
+          <a class="navbar-brand" href="/">UniFind</a>
       </div>
       <div>
           <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="/"><span class="glyphicon glyphicon-home"></span>Home</a>
+            </li>
             <li>
               <a href="/settings"><span class="glyphicon glyphicon-cog"></span>Settings</a>
             </li>
