created two collections but not able to show form

--- a/UniFind/style.styl
+++ b/UniFind/style.styl
@@ -125,7 +125,10 @@ p
         margin-top 40px
         padding-left $side-nav-large
 
-.new-post
+.new-post-lost
+    margin-bottom 20px
+
+.new-post-found
     margin-bottom 20px
 
 .new-post-container
