updated accounts system and improved UI

--- a/UniFind/client/layouts/MainLayout.html
+++ b/UniFind/client/layouts/MainLayout.html
@@ -1,6 +1,6 @@
 <template name="MainLayout">
-  {{> HeaderWithNav}}
-  <!--<main class="main-layout">-->
+  {{> TopNavbar}}
+
   <main>
     {{> Template.dynamic template=main}}
   </main>
