--- a/UniFind/client/layouts/HomeLayout.html
+++ b/UniFind/client/layouts/HomeLayout.html
@@ -1,6 +1,8 @@
 <template name="HomeLayout">
-  {{> Header}}
+  {{> TopNavbarBeforeLogin}}
+
   <main>
     {{> Template.dynamic template=main}}
   </main>
+  
 </template>
