--- a/UniFind/client/partials/TopNavbar.scss
+++ b/UniFind/client/partials/TopNavbar.scss
@@ -1,23 +1,25 @@
 a:link {
     text-decoration: none;
-    color: white;
 }
 
 a:visited {
     text-decoration: none;
-    color: white;
 }
 
 a:hover {
     text-decoration: none;
-    color: white;
 }
 
 a:active {
     text-decoration: none;
-    color: white;
 }
 
 .paddingLeft {
   padding-left: 12px;
+}
+
+.hoverWhite {
+  &:hover {
+    color: white;
+  }; 
 }
