--- a/UniFind/client/partials/TopNavbarBeforeLogin.html
+++ b/UniFind/client/partials/TopNavbarBeforeLogin.html
@@ -1,18 +1,23 @@
 <template name="TopNavbarBeforeLogin">
-  <div class="navbar-fixed">
-    <nav class="teal">
-      <div class="nav-wrapper paddingLeft">
-        <a href="/" class="brand-logo paddingLeft">UniFind</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li>{{> loginButtons}}</li>
-          <li><a href="/">Home</a></li>
-          <li><a href="/login">Login</a></li>
-          <li><a href="/register">Register</a></li>
+  <nav class="teal">
+    <div class="nav-wrapper paddingLeft">
+      <a href="/" class="brand-logo paddingLeft">UniFind</a>
+      <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li>{{> loginButtons}}</li>
+        <li><a href="/" class="hoverWhite">Home</a></li>
+        <li><a href="/login" class="hoverWhite">Login</a></li>
+        <li><a href="/register" class="hoverWhite">Register</a></li>
+      </ul>
 
-        </ul>
-      </div>
-    </nav>
-  </div>
+      <ul class="side-nav" id="mobile-menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
+      </ul>
+
+    </div>
+  </nav>
 </template>
 
 <!-- class="waves-effect waves-light btn red accent-2" -->
