updated add post form and added sidenav for filter

--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -4,10 +4,10 @@
       <a href="/" class="brand-logo paddingLeft">UniFind</a>
       <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/" class="hoverWhite">Home</a></li>
-        <li><a class="dropdown-button hoverWhite" href="#!" data-activates="dropdown1">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a href="/notifications" class="hoverWhite">Notifications</a></li>
-        <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1 hoverWhite">Add Post</a></li>
+        <li><a href="/" class="hoverWhite white-text">Home</a></li>
+        <li><a class="dropdown-button hoverWhite white-text" href="#!" data-activates="dropdown1">Account<i class="material-icons right white-text">arrow_drop_down</i></a></li>
+        <li><a href="/notifications" class="hoverWhite white-text">Notifications</a></li>
+        <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1 hoverWhite white-text">Add Post</a></li>
         <li>{{> loginButtons}}</li>
       </ul>
     </div>
