--- a/UniFind/client/partials/Body.html
+++ b/UniFind/client/partials/Body.html
@@ -1,9 +1,12 @@
 <template name="Body">
   <main>
-    <div class="billboard">
+    <div class="row">
+      <div class="center-align">
       <a href="/search-found-items"><button class="btn btn-danger btn-xl">Lost</button> </a>
 
       <a href="/search-lost-items"><button class="btn btn-primary btn-xl">Found</button> </a>
+      </div>
     </div>
+
   </main>
 </template>
