--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -25,7 +25,7 @@
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
     <li><a href="/view-posts" class="grey-text text-darken-1 hoverWhite">View my posts</a></li>
     <li class="divider"></li>
-    <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">logout</a></li>
+    <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
 
   <ul id="dropdown2" class="dropdown-content">
@@ -33,7 +33,7 @@
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
     <li><a href="/view-posts" class="grey-text text-darken-1 hoverWhite">View my posts</a></li>
     <li class="divider"></li>
-    <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">logout</a></li>
+    <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
 
 </template>
