Added homepage design and rewrite filer

--- a/UniFind/client/partials/Body.html
+++ b/UniFind/client/partials/Body.html
@@ -1,12 +1,43 @@
 <template name="Body">
   <main>
-    <div class="row">
-      <div class="center-align">
-        <a href="/search-found-items"><button class="btn btn-danger btn-xl">Lost</button> </a>
-
-        <a href="/search-lost-items"><button class="btn btn-primary btn-xl">Found</button> </a>
-        </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1498079109603&di=425837fbba8a1741e92600f3b5e1cf20&imgtype=0&src=http%3A%2F%2Fp0.qhimg.com%2Ft018449ecef10d4cdbd.png"></div>
     </div>
+    <div class="section white">
+      <div class="row container">
+        <h2 class="header">Welcome to Unifind!</h2>
+        <p class="grey-text text-darken-3 lighten-3">Have lost or found an item? Look at the recent posts by clicking on the bottoms below!</p>
+        <div class="row">
+          <div class="center">
+            <a href="/search-found-items"><button class="btn btn-danger btn-xl">Lost</button> </a>
+
+            <a href="/search-lost-items"><button class="btn btn-primary btn-xl">Found</button> </a>
+            </div>
+        </div>
+      </div>
+    </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1498080487178&di=5eac28ef674960ccae8b909aaa170f24&imgtype=0&src=http%3A%2F%2Fimg1.3lian.com%2F2015%2Fa1%2F116%2Fd%2F155.jpg"></div>
+  </div>
+  <div class="section white">
+    <div class="row container">
+      <h2 class="header">How it works?</h2>
+      <p class="grey-text text-darken-3 lighten-3">
+        1. Report what item you have lost and/or found
+      </p>
+      <p class="grey-text text-darken-3 lighten-3">
+        2. System suggests relevant posts based on filtered results
+      </p>
+      <p class="grey-text text-darken-3 lighten-3">
+        3. If matched, contact the person
+      </p>
+      <p class="grey-text text-darken-3 lighten-3">
+        4. Otherwise, publish a post
+      </p>
+
+    </div>
+  </div>
+
 
   </main>
 </template>
