added edit post function

--- a/UniFind/client/partials/Body.scss
+++ b/UniFind/client/partials/Body.scss
@@ -7,3 +7,25 @@
 {
     height: 350px;
 }
+
+.lost-btn {
+  height: 60px;
+  width: 150px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.found-btn {
+  height: 60px;
+  width: 160px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.btn-padding-left {
+  padding-left: 30px;
+}
+
+.btn-padding-right {
+  padding-right: 30px;
+}
