--- a/UniFind/client/layouts/MainLayout.html
+++ b/UniFind/client/layouts/MainLayout.html
@@ -1,9 +1,11 @@
 <template name="MainLayout">
   {{> TopNavbar}}
-
-  <main>
-    {{> Template.dynamic template=main}}
-  </main>
-
-  {{> Footer}}
+  <div class="page-flexbox-wrapper">
+    <main>
+      {{> Template.dynamic template=main}}
+    </main>
+    <footer>
+      {{> Footer}}
+    </footer>
+  </div>
 </template>
