--- a/UniFind/client/partials/Footer.scss
+++ b/UniFind/client/partials/Footer.scss
@@ -1,3 +1,9 @@
-.footer-padding {
-  padding-top: 10px;
+.page-flexbox-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 1 auto;
 }
