fixed filtering by colour function

--- a/UniFind/client/posts/SideNav.scss
+++ b/UniFind/client/posts/SideNav.scss
@@ -1,3 +1,12 @@
 .paddingTop {
   padding-top: 20px;
 }
+
+.search-btn-padding {
+  padding-top: 12px;
+  padding-bottom: 10px;
+}
+
+.reset-padding {
+  padding-left: 40px;
+}
