--- a/UniFind/client/partials/Body.scss
+++ b/UniFind/client/partials/Body.scss
@@ -2,8 +2,34 @@
 {
   padding-top: 50px;
 }
-
+.center-icon
+{
+  padding-left: 90px;
+  padding-top: 30px;
+}
 .parallax-container
 {
     height: 350px;
+}
+
+.lost-btn {
+  height: 60px;
+  width: 150px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.found-btn {
+  height: 60px;
+  width: 160px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.btn-padding-left {
+  padding-left: 30px;
+}
+
+.btn-padding-right {
+  padding-right: 30px;
 }
