added contact attribute

--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -8,7 +8,7 @@
         <li><a class="dropdown-button hoverWhite white-text" href="#!" data-activates="dropdown1">Account<i class="material-icons right white-text">arrow_drop_down</i></a></li>
         <li><a href="/notifications" class="hoverWhite white-text">Notifications</a></li>
         <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1 hoverWhite white-text">Add Post</a></li>
-        <li>{{> loginButtons}}</li>
+        <!--<li>{{> loginButtons}}</li>-->
       </ul>
     </div>
   </nav>
