--- a/UniFind/client/partials/TopNavbarBeforeLogin.html
+++ b/UniFind/client/partials/TopNavbarBeforeLogin.html
@@ -4,7 +4,7 @@
       <a href="/" class="brand-logo paddingLeft">UniFind</a>
       <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>{{> loginButtons}}</li>
+        <!--<li>{{> loginButtons}}</li>-->
         <li><a href="/" class="hoverWhite white-text">Home</a></li>
         <li><a href="/login" class="hoverWhite white-text">Login</a></li>
         <li><a href="/register" class="hoverWhite white-text">Register</a></li>
