added inbox and chat feature

--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -24,6 +24,7 @@
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
     <li><a href="/view-posts" class="grey-text text-darken-1 hoverWhite">View my posts</a></li>
+    <li><a href="/inbox" class="grey-text text-darken-1 hoverWhite">Inbox</a></li>
     <li class="divider"></li>
     <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
@@ -32,6 +33,7 @@
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
     <li><a href="/view-posts" class="grey-text text-darken-1 hoverWhite">View my posts</a></li>
+    <li><a href="/inbox" class="grey-text text-darken-1 hoverWhite">Inbox</a></li>
     <li class="divider"></li>
     <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
