fixed bugs in deleting posts

--- a/UniFind/client/partials/Body.html
+++ b/UniFind/client/partials/Body.html
@@ -6,7 +6,7 @@
     <div class="section white">
       <div class="row container">
         <h2 class="header">Welcome to Unifind!</h2>
-        <h5 class="grey-text text-darken-3 lighten-3">Lost or found any item? Clicking on the buttons below to look at recent posts!</h5>
+        <h5 class="grey-text text-darken-3 lighten-3 thin">Lost or found any item? Clicking on the buttons below to look at recent posts!</h5>
         <div class="row">
           <div class="center">
             <span class="btn-padding-right">
