--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -5,17 +5,18 @@
       <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/" class="hoverWhite white-text">Home</a></li>
-        <li><a class="dropdown-button hoverWhite white-text" href="#!" data-activates="dropdown1">Account<i class="material-icons right white-text">arrow_drop_down</i></a></li>
+        <li><a href="#!" class="dropdown-button hoverWhite white-text" data-activates="dropdown1">My Account<i class="material-icons right white-text">arrow_drop_down</i></a></li>
+        <li><a href="/#!" class="dropdown-button hoverWhite white-text" data-activates="dropdown3">View My Posts<i class="material-icons right white-text">arrow_drop_down</i></a></li>
         <li><a href="/notifications" class="hoverWhite white-text">Notifications</a></li>
         <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1 hoverWhite white-text">Add Post</a></li>
-        <!--<li>{{> loginButtons}}</li>-->
       </ul>
     </div>
   </nav>
 
   <ul class="side-nav" id="mobile-menu">
     <li><a href="/">Home</a></li>
-    <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Account<i class="material-icons right">arrow_drop_down</i></a></li>
+    <li><a class="dropdown-button" href="#!" data-activates="dropdown2">My Account<i class="material-icons right">arrow_drop_down</i></a></li>
+    <li><a href="#!" class="dropdown-button" data-activates="dropdown4">View My Posts<i class="material-icons right">arrow_drop_down</i></a></li>
     <li><a href="/notifications">Notifications</a></li>
     <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1">Add Post</a></li>
   </ul>
@@ -23,7 +24,6 @@
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
-    <li><a href="/view-posts" class="grey-text text-darken-1 hoverWhite">View my posts</a></li>
     <li><a href="/inbox" class="grey-text text-darken-1 hoverWhite">Inbox</a></li>
     <li class="divider"></li>
     <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
@@ -32,10 +32,18 @@
   <ul id="dropdown2" class="dropdown-content">
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
-    <li><a href="/view-posts" class="grey-text text-darken-1 hoverWhite">View my posts</a></li>
     <li><a href="/inbox" class="grey-text text-darken-1 hoverWhite">Inbox</a></li>
     <li class="divider"></li>
     <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
 
+  <ul id="dropdown3" class="dropdown-content">
+    <li><a href="/view-posts-lost" class="grey-text text-darken-1 hoverWhite">Reported Lost Items</a></li>
+    <li><a href="/view-posts-found" class="grey-text text-darken-1 hoverWhite">Reported Found Items</a></li>
+  </ul>
+
+  <ul id="dropdown4" class="dropdown-content">
+    <li><a href="/view-posts-lost" class="grey-text text-darken-1 hoverWhite">Reported Lost Items</a></li>
+    <li><a href="/view-posts-found" class="grey-text text-darken-1 hoverWhite">Reported Found Items</a></li>
+  </ul>
 </template>
