--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -7,6 +7,7 @@
         <li><a href="/" class="hoverWhite white-text">Home</a></li>
         <li><a href="#!" class="dropdown-button hoverWhite white-text" data-activates="dropdown1">My Account<i class="material-icons right white-text">arrow_drop_down</i></a></li>
         <li><a href="/#!" class="dropdown-button hoverWhite white-text" data-activates="dropdown3">View My Posts<i class="material-icons right white-text">arrow_drop_down</i></a></li>
+        <li><a href="/inbox" class="hoverWhite white-text">Inbox<span class="badge red lighten-2 white-text">1</span></a></li>
         <li><a href="/notifications" class="hoverWhite white-text">Notifications</a></li>
         <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1 hoverWhite white-text">Add Post</a></li>
       </ul>
@@ -17,6 +18,7 @@
     <li><a href="/">Home</a></li>
     <li><a class="dropdown-button" href="#!" data-activates="dropdown2">My Account<i class="material-icons right">arrow_drop_down</i></a></li>
     <li><a href="#!" class="dropdown-button" data-activates="dropdown4">View My Posts<i class="material-icons right">arrow_drop_down</i></a></li>
+    <li><a href="/inbox"><span class="badge">1</span>Inbox</a></li>
     <li><a href="/notifications">Notifications</a></li>
     <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1">Add Post</a></li>
   </ul>
@@ -24,7 +26,6 @@
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
-    <li><a href="/inbox" class="grey-text text-darken-1 hoverWhite">Inbox</a></li>
     <li class="divider"></li>
     <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
@@ -32,7 +33,6 @@
   <ul id="dropdown2" class="dropdown-content">
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
-    <li><a href="/inbox" class="grey-text text-darken-1 hoverWhite">Inbox</a></li>
     <li class="divider"></li>
     <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
