added checks on password complexity

--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -27,14 +27,14 @@
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
     <li class="divider"></li>
-    <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
+    <li><a href="/" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
 
   <ul id="dropdown2" class="dropdown-content">
     <li><a href="/profile" class="grey-text text-darken-1 hoverWhite">Profile</a></li>
     <li><a href="/settings" class="grey-text text-darken-1 hoverWhite">Settings</a></li>
     <li class="divider"></li>
-    <li><a href="#" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
+    <li><a href="/" class="logout grey-text text-darken-1 hoverWhite">Logout</a></li>
   </ul>
 
   <ul id="dropdown3" class="dropdown-content">
