added notification time limit and modified mobile styling

--- a/UniFind/client/partials/Body.html
+++ b/UniFind/client/partials/Body.html
@@ -8,7 +8,7 @@
         <h2 class="header">Welcome to Unifind!</h2>
         <h5 class="grey-text text-darken-3 lighten-3 thin">Lost or found any item? Clicking on the buttons below to look at recent posts!</h5>
         <div class="row">
-          <div class="center">
+          <div class="buttons center">
             <span class="btn-padding-right">
                <a href="/search-found-items" class="btn-large red white-text hoverWhite lost-btn">Lost</a>
              </span>
@@ -23,34 +23,41 @@
     <div class="parallax"><img src="imgs/utown.jpg"></div>
   </div>
   <div class="section white">
-      <div class="row container">
-        <div class="col s4">
+      <div class="row">
+        <div class="col s4 m4">
           <!-- Promo Content 1 goes here -->
-          <i class="material-icons center-icon large red-text text-lighten-2">search</i>
-          <h5 class="grey-text center-align text-darken-3">
-            View posts
-          </h5>
-          <p class="center-align">Click on the lost or found buttons above to see what others have found/lost</p>
+          <div class="container center icons">
+            <i class="material-icons large red-text text-lighten-2">search</i>
+            <h5 class="grey-text center-align text-darken-3">
+              View posts
+            </h5>
+            <p class="center-align">Click on the lost or found buttons above to see what others have found/lost</p>
+          </div>
         </div>
-        <div class="col s4">
+
+        <div class="col s4 m4">
           <!-- Promo Content 2 goes here -->
-          <i class="material-icons center-icon large red-text text-lighten-2">description</i>
-          <h5 class="grey-text center-align text-darken-3">
-            Add a post
-          </h5>
-          <p class="center-align">Report what item you have lost or found for others to contact you</p>
+          <div class="container center icons">
+            <i class="material-icons large red-text text-lighten-2">description</i>
+            <h5 class="grey-text center-align text-darken-3">
+              Add a post
+            </h5>
+            <p class="center-align">Report what item you have lost or found for others to contact you</p>
+          </div>
         </div>
-        <div class="col s4">
+
+        <div class="col s4 m4">
           <!-- Promo Content 3 goes here -->
-          <i class="material-icons center-icon large red-text text-lighten-2">call</i>
-          <h5 class="grey-text center-align text-darken-3">
-            Contact
-          </h5>
-          <p class="center-align">Contact the person to return or retrieve the item</p>
+          <div class="container center icons">
+            <i class="material-icons large red-text text-lighten-2">call</i>
+            <h5 class="grey-text center-align text-darken-3">
+              Contact
+            </h5>
+            <p class="center-align">Contact the person to return or retrieve the item</p>
+          </div>
         </div>
+
+      </div>
     </div>
-  </div>
-
-
   </main>
 </template>
