--- a/UniFind/client/partials/Body.scss
+++ b/UniFind/client/partials/Body.scss
@@ -1,10 +1,9 @@
-.center
+.buttons
 {
   padding-top: 50px;
 }
-.center-icon
+.icons
 {
-  padding-left: 90px;
   padding-top: 30px;
 }
 .parallax-container
