added footer content and modified registration process

--- a/UniFind/client/partials/Body.html
+++ b/UniFind/client/partials/Body.html
@@ -1,7 +1,7 @@
 <template name="Body">
   <main>
     <div class="parallax-container">
-      <div class="parallax"><img src="imgs/nus.jpg"></div>
+      <div class="parallax"><img src="imgs/nus.jpg" class="responsive-img"></div>
     </div>
     <div class="section white">
       <div class="row container">
@@ -20,7 +20,7 @@
       </div>
     </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="imgs/utown.jpg"></div>
+    <div class="parallax"><img src="imgs/utown.jpg" class="responsive-img"></div>
   </div>
   <div class="section white">
       <div class="row">
