--- a/UniFind/client/partials/Footer.html
+++ b/UniFind/client/partials/Footer.html
@@ -3,24 +3,22 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text">UniFind</h5>
+          <p class="grey-text text-lighten-4">An improved lost and found system for NUS students.</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" href="/about">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="/team">The Team</a></li>
+            <li><a class="grey-text text-lighten-3" href="/contact">Contact Us</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2017 UniFind
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2017 UniFind
+        <!--<a class="grey-text text-lighten-4 right" href="#!">more links</a>-->
       </div>
     </div>
   </footer>
