fixed bugs after deployment

--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -3,6 +3,7 @@
     <div class="nav-wrapper paddingLeft">
       <a href="/" class="brand-logo paddingLeft">UniFind</a>
       <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+      <!--<a href="#" data-activates="mobile-menu2" class="button-collapse hide-on-large-only"><i class="material-icons">menu</i></a>-->
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/" class="hoverWhite white-text">Home</a></li>
         <li><a href="#!" class="dropdown-button hoverWhite white-text" data-activates="dropdown1">My Account<i class="material-icons right white-text">arrow_drop_down</i></a></li>
