--- a/UniFind/client/partials/Body.html
+++ b/UniFind/client/partials/Body.html
@@ -7,7 +7,7 @@
       <div class="row container">
         <h2 class="header">Welcome to Unifind!</h2>
         <h5 class="grey-text text-darken-3 lighten-3 thin">Lost or found any item? Clicking on the buttons below to look at recent posts!</h5>
-        <div class="row">
+        <div class="row hide-on-med-and-down">
           <div class="buttons center">
             <span class="btn-padding-right">
                <a href="/search-found-items" class="btn-large red white-text hoverWhite lost-btn">Lost</a>
@@ -15,6 +15,12 @@
              <span class="btn-padding-left">
                <a href="/search-lost-items" class="btn-large green white-text hoverWhite found-btn">Found</a>
              </span>
+          </div>
+        </div>
+        <div class="row hide-on-large-only">
+          <div class="buttons center">
+               <a href="/search-found-items" class="btn-large red white-text hoverWhite lost-btn">Lost</a>
+               <a href="/search-lost-items" class="btn-large green white-text hoverWhite found-btn">Found</a>
           </div>
         </div>
       </div>
