--- a/UniFind/client/chats/Chat.scss
+++ b/UniFind/client/chats/Chat.scss
@@ -22,7 +22,7 @@
 
 .mine{
   float: right;
-  background-color: #e0f2f1;
+  background-color: #b2dfdb;
   margin: 10px 20px 10px 20px;
   clear:both;
 }
