--- a/UniFind/client/chats/Chat.scss
+++ b/UniFind/client/chats/Chat.scss
@@ -1,6 +1,7 @@
 .inboxContainer{
   height: 75px;
   font-weight: bold;
+  padding-top: 10px;
 }
 .chatContainer{
   height: 500px;
@@ -11,7 +12,8 @@
 .msgbubble{
   display: inline-block;
   border-radius: 7px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
   position: relative;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   color: black;
@@ -55,4 +57,8 @@
 .timeStamp{
     color: gray;
     font-size: 10px;
+}
+
+.collection-item{
+  height: 130px;
 }
