fixed bugs with some methods

--- a/UniFind/client/chats/Chat.scss
+++ b/UniFind/client/chats/Chat.scss
@@ -22,7 +22,8 @@
 
 .mine{
   float: right;
-  background-color: #FFDEAD;
+  // background-color: #FFDEAD;
+  background-color: #ddf7c8;
   margin: 10px 20px 10px 20px;
   clear:both;
 }
