--- a/UniFind/client/partials/TopNavbar.html
+++ b/UniFind/client/partials/TopNavbar.html
@@ -20,7 +20,7 @@
             <span class="badge red lighten-2 white-text">{{generalNotificationCount}}</span>
           {{/if}}
         </a></li>
-        <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1 hoverWhite white-text">Add Post</a></li>
+        <li><a href="/my-posts" class="waves-effect waves-light btn red lighten-1 hoverWhite white-text">Add Post</a></li>
       </ul>
     </div>
   </nav>
@@ -41,7 +41,7 @@
         <span class="badge red lighten-2 white-text">{{generalNotificationCount}}</span>
       {{/if}}
     </a></li>
-    <li><a href="/my-posts" class="waves-effect waves-light btn pulse red lighten-1">Add Post</a></li>
+    <li><a href="/my-posts" class="waves-effect waves-light btn red lighten-1">Add Post</a></li>
   </ul>
 
   <ul id="dropdown1" class="dropdown-content">
